--- a/rush/index.html
+++ b/rush/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rush</title>
-    <link rel="stylesheet" href="assets/styles/index.css" />
+    <link rel="stylesheet" href="assets/styles/cmeesuan.css" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -31,7 +31,7 @@
         </a>
 
         <a href="pages/nmoonpin.html" class="navigation__profile">
-          <img src="assets/images/napat.jpg" alt="" class="napat__img" />
+          <img src="assets/images/napat-2.jpg" alt="" class="napat__img" />
           <h2 class="navigation__name">Pat</h2>
         </a>
       </div>
