--- a/rush/pages/cmeesuan.html
+++ b/rush/pages/cmeesuan.html
@@ -6,27 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rush Project</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="../assets/styles/index.css" />
-    <!-- Font -->
+    <link rel="stylesheet" href="../assets/styles/cmeesuan.css" />
+    <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Font awesome -->
     <script
       src="https://kit.fontawesome.com/2ebe22f94b.js"
       crossorigin="anonymous"
     ></script>
-    <!-- CSS only -->
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <!-- JavaScript Bundle with Popper -->
+    <!-- Bootstrap JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
@@ -60,14 +62,10 @@
         ></button>
       </div>
       <div class="offcanvas-body">
-        <div
-          class="mobile__nav__item"
-          onclick="scrollPage('home')"
-          data-bs-dismiss="offcanvas"
-        >
+        <a href="../index.html" class="mobile__nav__item">
           <i class="fa-solid fa-house-user"></i>
           <span>Home</span>
-        </div>
+        </a>
         <div
           class="mobile__nav__item"
           data-bs-dismiss="offcanvas"
@@ -92,7 +90,7 @@
     <nav class="d-none d-lg-flex flex-column justify-content-center">
       <ul>
         <li class="nav__item">
-          <a href="#home">
+          <a href="../index.html">
             <i class="fa-solid fa-house-user"></i>
             <span>Home</span>
           </a>
@@ -115,10 +113,8 @@
 
     <!------- Home -------->
     <section id="home" class="page">
-      <div class="home__content">
-        <h1 onclick="randomColor('name')" id="name" class="pointer">
-          Zantaclaus
-        </h1>
+      <div class="home__content" data-aos="fade-up">
+        <h1 id="name" class="pointer zan__header">Zantaclaus</h1>
         <p>I'm a Frontend Developer</p>
       </div>
     </section>
@@ -129,47 +125,46 @@
       <div class="header">
         <h2>ABOUT</h2>
         <p class="tagline">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-          laboriosam voluptatum doloremque suscipit
+          Hi! I'm Zan. I'm a third year Computer Engineering student at KMITL.
         </p>
       </div>
 
       <div class="about__information">
-        <div class="about__img"></div>
+        <div class="about__img zantalaus__img" data-aos="fade-right"></div>
         <div class="infomation__detail">
           <h3 class="d-lg-none">Personal Infomation</h3>
           <div class="infomation__grid">
-            <div class="info">
+            <div class="info" data-aos="fade-left" data-aos-duration="100">
               <span>Name</span>
-              <p>Napat Moonpinit</p>
+              <p>Chinathip Meesuannil</p>
             </div>
-            <div class="info">
+            <div class="info" data-aos="fade-left" data-aos-duration="200">
               <span>Nickname</span>
-              <p>Zantaclaus</p>
+              <p>Zan</p>
             </div>
-            <div class="info">
+            <div class="info" data-aos="fade-left" data-aos-duration="300">
               <span>Age</span>
-              <p>21</p>
+              <p>20</p>
             </div>
-            <div class="info">
+            <div class="info" data-aos="fade-left" data-aos-duration="400">
               <span>Birthday</span>
-              <p>1 May 2001</p>
+              <p>30 Dec 2001</p>
             </div>
-            <div class="info">
-              <span>City</span>
-              <p>Bangkok, Thailand</p>
-            </div>
-            <div class="info">
-              <span>Major</span>
-              <p>Computer Engineering</p>
-            </div>
-            <div class="info">
-              <span>Education</span>
-              <p>KMITL</p>
-            </div>
-            <div class="info">
+            <div class="info" data-aos="fade-left" data-aos-duration="500">
               <span>Hobby</span>
               <p>Guitar and Games</p>
+            </div>
+            <div class="info" data-aos="fade-left" data-aos-duration="600">
+              <span>GPAX</span>
+              <p>3.73</p>
+            </div>
+            <div class="info" data-aos="fade-left" data-aos-duration="700">
+              <span>Education</span>
+              <p>Computer Engineering, KMITL</p>
+            </div>
+            <div class="info" data-aos="fade-left" data-aos-duration="800">
+              <span>City</span>
+              <p>Bangkok, Thailand</p>
             </div>
           </div>
         </div>
@@ -182,52 +177,53 @@
       <div class="container-lg">
         <div class="header">
           <h2>Experiance</h2>
-          <p class="tagline">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-            laboriosam voluptatum
-          </p>
         </div>
 
         <div class="experiance__box">
           <ol>
-            <li>
-              <h3>SENIOR GRAPHIC DESIGN SPECIALIST</h3>
-              <p>Experion, New York, NY</p>
+            <li data-aos="fade-up">
+              <h3>Thai Economap</h3>
+              <p>
+                <a
+                  href="https://demo.thaieconomap.com"
+                  target="_blank"
+                  class="demo__link"
+                  >demo.thaieconomap.com</a
+                >
+              </p>
               <ul>
+                <li>Lead of Frontend Team</li>
                 <li>
-                  Lead in the
-                  <span
-                    >design, development, and implementation of the graphic </span
-                  >, layout, and production communication materials
+                  The web application that
+                  <span> facilitated online food </span> ordering for local
+                  store by using map and line service.
                 </li>
-                <li>
-                  Delegate tasks to the
-                  <span>7 members of the design team</span> and provide counsel
-                  on all aspects of the project.
-                </li>
-                <li>
-                  <span>Supervise the assessment of all graphic materials</span>
-                  in order to ensure quality and accuracy of the design
-                </li>
+                <li>Tech Stack : ReactTS NestJS MongoDB</li>
+                <li>*** This demo only ready on mobile ***</li>
               </ul>
             </li>
 
-            <li>
-              <h3>GRAPHIC DESIGN SPECIALIST</h3>
-              <p>Stepping Stone Advertising, New York, NY</p>
+            <li data-aos="fade-left">
+              <h3>Teawtip Chiangrai</h3>
+              <p>
+                <a
+                  href="https://teawtip-changrai.netlify.app"
+                  target="_blank"
+                  class="demo__link"
+                  >teawtip-changrai.netlify.app</a
+                >
+              </p>
               <ul>
+                <li>Lead of Frontend Team</li>
                 <li>
-                  <span>Developed numerous marketing programs </span> (logos,
-                  brochures, infographics, presentations, and advertisements).
+                  The website that will take you to know more information about
+                  <span>Chiangrai, Thailand </span>.
                 </li>
                 <li>
-                  Managed up to <span>5 projects or tasks </span>at a given time
-                  while under pressure
+                  This demo deploy on free hosting. Don't be serious if website
+                  loads slowly.
                 </li>
-                <li>
-                  Recommended and consulted with clients on the most
-                  <span> appropriate graphic design</span>
-                </li>
+                <li>Tech Stack : ReactTS</li>
               </ul>
             </li>
           </ol>
@@ -241,17 +237,13 @@
       <div class="container-lg">
         <div class="header">
           <h2>SKILL</h2>
-          <p class="tagline">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-            laboriosam voluptatum
-          </p>
         </div>
 
         <div class="progress__container">
-          <div class="progress__bar">
+          <div class="progress__bar" data-aos="flip-left">
             <div class="d-flex justify-content-between">
               <h6>HTML</h6>
-              <h6>100%</h6>
+              <h6 style="color: #68d46f">Advanced</h6>
             </div>
             <div class="progress">
               <div
@@ -261,15 +253,15 @@
                 aria-valuenow="10"
                 aria-valuemin="0"
                 aria-valuemax="100"
-                style="width: 100%"
+                style="width: 90%"
               ></div>
             </div>
           </div>
 
-          <div class="progress__bar">
+          <div class="progress__bar" data-aos="flip-left">
             <div class="d-flex justify-content-between">
               <h6>CSS</h6>
-              <h6>100%</h6>
+              <h6 style="color: #68d46f">Advanced</h6>
             </div>
             <div class="progress">
               <div
@@ -279,15 +271,15 @@
                 aria-valuenow="10"
                 aria-valuemin="0"
                 aria-valuemax="100"
-                style="width: 100%"
+                style="width: 80%"
               ></div>
             </div>
           </div>
 
-          <div class="progress__bar">
+          <div class="progress__bar" data-aos="flip-left">
             <div class="d-flex justify-content-between">
               <h6>JS</h6>
-              <h6>100%</h6>
+              <h6 style="color: #68d46f">Advanced</h6>
             </div>
             <div class="progress">
               <div
@@ -297,15 +289,15 @@
                 aria-valuenow="10"
                 aria-valuemin="0"
                 aria-valuemax="100"
-                style="width: 100%"
+                style="width: 90%"
               ></div>
             </div>
           </div>
 
-          <div class="progress__bar">
+          <div class="progress__bar" data-aos="flip-right">
             <div class="d-flex justify-content-between">
-              <h6>React JS</h6>
-              <h6>100%</h6>
+              <h6>React JS/TS</h6>
+              <h6 style="color: #ff9d0b">Intermediate</h6>
             </div>
             <div class="progress">
               <div
@@ -315,15 +307,15 @@
                 aria-valuenow="10"
                 aria-valuemin="0"
                 aria-valuemax="100"
-                style="width: 100%"
+                style="width: 70%"
               ></div>
             </div>
           </div>
 
-          <div class="progress__bar">
+          <div class="progress__bar" data-aos="flip-right">
             <div class="d-flex justify-content-between">
               <h6>Node.js</h6>
-              <h6>100%</h6>
+              <h6 style="color: #ff9d0b">Intermediate</h6>
             </div>
             <div class="progress">
               <div
@@ -333,15 +325,15 @@
                 aria-valuenow="10"
                 aria-valuemin="0"
                 aria-valuemax="100"
-                style="width: 100%"
+                style="width: 70%"
               ></div>
             </div>
           </div>
 
-          <div class="progress__bar">
+          <div class="progress__bar" data-aos="flip-right">
             <div class="d-flex justify-content-between">
-              <h6>Docker</h6>
-              <h6>100%</h6>
+              <h6>Python</h6>
+              <h6 style="color: #f37142">Elementary</h6>
             </div>
             <div class="progress">
               <div
@@ -351,7 +343,7 @@
                 aria-valuenow="10"
                 aria-valuemin="0"
                 aria-valuemax="100"
-                style="width: 100%"
+                style="width: 50%"
               ></div>
             </div>
           </div>
@@ -364,19 +356,15 @@
     <section id="contact" class="container-lg">
       <div class="header">
         <h2>CONTACT</h2>
-        <p class="tagline">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-          laboriosam voluptatum
-        </p>
       </div>
-      <div class="contact__container">
+      <div class="contact__container" data-aos="fade-up">
         <div class="contact__info">
           <div onclick="randomColor('location')" class="pointer">
             <i class="fa-solid fa-location-dot" id="location"></i>
           </div>
           <div class="contact__detail">
             <h6>Location</h6>
-            <p>A108 Street, New York, NY 535022</p>
+            <p>Ladkrabang, Bangkok, Thailand 10520</p>
           </div>
         </div>
 
@@ -386,7 +374,7 @@
           </div>
           <div class="contact__detail">
             <h6>Email</h6>
-            <p>zantaclaus@napat.com</p>
+            <p>tarzuto@gmail.com</p>
           </div>
         </div>
 
@@ -396,7 +384,7 @@
           </div>
           <div class="contact__detail">
             <h6>Call</h6>
-            <p>+66 97-123-4567</p>
+            <p>+66 97-047-2541</p>
           </div>
         </div>
       </div>
@@ -407,8 +395,10 @@
     <footer>
       <div class="container-lg p-4">
         <div class="footer__header">
-          <h2 onclick="addCount()" class="pointer">Zantaclaus</h2>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h2 onclick="addCount()" class="pointer zantalaus__btn">
+            Zantaclaus
+          </h2>
+          <p>click the upper me <3</p>
         </div>
 
         <div>
@@ -440,5 +430,9 @@
 
     <!-- JS -->
     <script src="../assets/js/index.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
