change napat about

--- a/rush/pages/nmoonpin.html
+++ b/rush/pages/nmoonpin.html
@@ -182,8 +182,8 @@
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000"
             >
-              <span>City</span>
-              <p>Bangkok, Thailand</p>
+              <span>Hobby</span>
+              <p>Sing and Football</p>
             </div>
             <div
               class="info"
@@ -191,8 +191,8 @@
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000"
             >
-              <span>Major</span>
-              <p>Computer Engineering</p>
+              <span>GPAX</span>
+              <p>3.54</p>
             </div>
             <div
               class="info"
@@ -201,7 +201,7 @@
               data-aos-duration="2000"
             >
               <span>Education</span>
-              <p>KMITL</p>
+              <p>Computer Engineering, KMITL</p>
             </div>
             <div
               class="info"
@@ -209,8 +209,8 @@
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000"
             >
-              <span>Hobby</span>
-              <p>Sing and Football</p>
+              <span>City</span>
+              <p>Bangkok, Thailand</p>
             </div>
           </div>
         </div>
