--- a/rush/pages/cmeesuan.html
+++ b/rush/pages/cmeesuan.html
@@ -114,7 +114,7 @@
     <!------- Home -------->
     <section id="home" class="page">
       <div class="home__content" data-aos="fade-up">
-        <h1 id="name" class="pointer zan__header">Zantaclaus</h1>
+        <h1 id="name" class="zan__header">Zantaclaus</h1>
         <p>I'm a Frontend Developer</p>
       </div>
     </section>
