change label gpax -> gap;

--- a/rush/pages/cmeesuan.html
+++ b/rush/pages/cmeesuan.html
@@ -155,7 +155,7 @@
               <p>Guitar and Games</p>
             </div>
             <div class="info" data-aos="fade-left" data-aos-duration="600">
-              <span>GPAX</span>
+              <span>GPA</span>
               <p>3.73</p>
             </div>
             <div class="info" data-aos="fade-left" data-aos-duration="700">
