--- a/rush/pages/nmoonpin.html
+++ b/rush/pages/nmoonpin.html
@@ -191,7 +191,7 @@
               data-aos-easing="ease-out-cubic"
               data-aos-duration="2000"
             >
-              <span>GPAX</span>
+              <span>GPA</span>
               <p>3.54</p>
             </div>
             <div
